<resources>
    <string name="app_name">toc ocd</string>
    <string name="what_would">What would you to be called?</string>
    <string name="your_name">Your name…</string>
    <string name="hintName">Put your name here</string>
    <string name="what_is_the_OCD">What is the OCD?</string>
    <string name="touch_for_more_information">Touch for information</string>
    <string name="description_information">Description…</string>
    <string name="howWorks">How works OCD?</string>
    <string name="hWDescription">It is well known how OCD works within each patient, as you read above first begins with a thought, an idea or an image that appears intrusively and that clearly the person with OCD does not want it or identify with it, this whole situation generates a lot of stress, anxiety, insecurity and discomfort in the person, all this leads the person to perform a series of actions (or thoughts) called rituals which counteract for a short period of time these negative feelings of anxiety, but in reality in the long term these compulsions make the problem bigger, as they increase the symptoms of OCD.\n\n
                    For example, a person with germ OCD has intrusive ideas, thoughts or images that everything is full of germs, so they will feel very insecure, anxious and uncomfortable, then to counteract these symptoms they will begin to wash their hands much more frequently and also stop going to certain places which they believe are contaminated, thus forming a cycle in which the person will not improve unless they stop doing these compulsions and confront their obsessions.</string>
    <string name="specialist">☑Obsessive-Compulsive (OCD) <br /> ☑Anxiety <br /> ☑Coping Skills</string>
    <string name="contact">Contact</string>
    <string name="ocd_information">Information</string>
    <string name="ocd_types">Types</string>
    <string name="ocd_seek_help">Seek help</string>
    <string name="information_area_title">Information area</string>
    <string name="information_area_description">Welcome to the information area, remember that the first step to improve is to be informed, here you will know the answers to the biggest questions that arise around OCD.</string>
    <string name="continue_option">Continue</string>
    <string name="touch_description">Touch each card to display all the information and answer your questions.</string>
    <string name="close_option">Close</string>
    <string name="user_name">👋 Hi %1$s</string>
    <string name="next_option">Next</string>
    <string name="start_option">Start</string>
    <string name="first_page_onboarding_title">Are You confused and have questions?</string>
    <string name="first_page_onboarding_description">OCD generates many doubts and questions such as: What is OCD? Do I have OCD? How can I get better? Well, here you will find the answer to these and other questions.</string>
    <string name="second_page_onboarding_title">OCD can be very confusing and stressful…</string>
    <string name="second_page_onboarding_description">We know how confusing, stressful, anxious and frustrating OCD can be, yet there is recovery and the first step to begin recovery is to get informed and know how OCD works.</string>
    <string name="third_page_onboarding_title">Thats why UsHelp is here to answer all your questions!</string>
    <string name="third_page_onboarding_description">UsHelp has been created to solve the most frequently asked questions about OCD, plus youll find OCD specialists to help you and your loved ones.</string>
    <string name="invalid_name">Incorrect name</string>
    <string name="invalid_name_length">Make sure your name contains characters but not exceed 10 characters</string>
    <string name="unexpected_error">Unexpected error, please try again later</string>
    <string name="error_title">Ups! An error occurred</string>
    <string name="find_psychologist">Find a list of OCD psychologists who can help you.</string>
    <string name="psychologist_title">Seek Help Area</string>
    <string name="psychologist_dialog_description">Welcome to the help area, here you will find a list of OCD professionals who will be able to advise and help you.</string>
    <string name="psychologitst_dialog_description">Click on the contact button below each specialist and start your recovery now!</string>
    <string name="types_dialog_title">Types of OCD Area</string>
    <string name="types_dialog_description">Welcome to the OCD Types area, here you will find information on the most common types of OCD</string>
    <string name="psychologitst_dialog_second_description">You can also click on the blue icon on the right to see much more information on specialized websites.</string>
    <string name="information_area_description_header">Solve your doubts about OCD here</string>
    <string name="types_title">Types of OCD Area</string>
    <string name="types_description_header">know the most common types of OCD</string>
    <string name="question_info">OCD is a mental condition characterized by obsessive thoughts and compulsions that occupy at least an hour a day, but usually more, and cause significant distress
                    Obsessions are usually persistent and uncontrollable thoughts, images or ideas that appear intrusively, these obsessions are unwanted and cause a lot of discomfort.  These thoughts also cause anxiety and discomfort that significantly interfere with normal life. Following these thoughts, the person with OCD performs a series of actions in order to counteract the discomfort, which actually increases the symptoms of OCD.
                    All people have intrusive thoughts throughout the day, but a person who does not have OCD is able to filter out recurring thoughts about germs, for example.  But people with OCD who are obsessed with germs cannot stop thinking about being contaminated and may even avoid entering public places.</string>
    <string name="what_symptoms">What are the symptoms?</string>
    <string name="age_ocd">At what age does OCD appear?</string>
    <string name="adults_ocd">How many adults have OCD?</string>
    <string name="children_ocd">How many children have OCD?</string>
    <string name="causes_ocd">Causes of OCD?</string>
    <string name="diagnostic_is_ocd">Diagnosis of OCD</string>
    <string name="treating_ocd">Treating OCD</string>
    <string name="doubt_ocd">How do I know if I have OCD?</string>
    <string name="treatment_ocd">Which treatment to choose?</string>
    <string name="specialist_ocd">How to choose a specialist?</string>
    <string name="specialist_ocd_description">Even mental health professionals with impressive credentials and experience in other mental conditions may lack the proper training to effectively diagnose and treat OCD. Only a qualified cognitive behavioral therapist can provide effective CBT. Before committing to treatment with any therapist, it is essential to check if he or she is competent to administer CBT for OCD</string>
    <string name="treatment_ocd_description">Getting relief from OCD is possible with the treatment that is available today. While there is no cure for OCD, the most effective and evidence-based treatment to effectively treat OCD is Cognitive Behavioral Therapy (CBT). This treatment is recommended by world-renowned institutions, such as the National Institutes of Mental Health, the Mayo Clinic and Harvard Medical School, among others.</string>
    <string name="doubt_ocd_description">Above in the question "How works OCD?" and in the question "What are the symptoms of OCD?" you can see how OCD works and how it manifests itself in people, but remember that it is very difficult and not recommended to self-diagnose, so it is always recommended to consult a professional.</string>
    <string name="treating_ocd_description">\uD83D\uDC69\u200D⚕️What are the treatments for obsessive-compulsive disorder?
                    The main treatments for obsessive-compulsive disorder are cognitive behavioral therapy with exposure and response prevention and medications.
                    Cognitive behavioral therapy (CBT) is a type of psychotherapy. Which teaches different ways of thinking, behaving and reacting to obsessions and compulsions. A specific type of CBT that can treat OCD is called exposure response prevention therapy, which is the most effective technique for treating OCD today, it involves gradually exposing the person with OCD to their fears and obsessions, learning healthy ways to deal with the anxiety caused by OCD.
                    OCD medications include certain types of antidepressants. For some people they work and for others they dont, also the side effects vary from person to person, so it is always recommended to consult a professional.</string>
    <string name="diagnosis_ocd_description">There is no laboratory test that can identify OCD.  Mental health professionals often use different diagnostic techniques to determine the presence of OCD, as well as other tools that measure the severity of obsessions and compulsions, the most common of which is the Yale-Brown Obsessive Compulsive Compulsive Scale (Y-BOCS).\n\n" +
                    "For this reason, it is always recommended to consult a professional, even better if he/she is a specialist in OCD or has experience in this type of conditions.</string>
    <string name="causes_ocd_description">The cause of obsessive-compulsive disorder is not yet known. Factors such as genetics, brain biology and chemistry, along with the persons environment, may play an important role in the condition.</string>
    <string name="children_ocd_description">There are  at least 1 in 200  or 500,000 – kids and teens that have OCD. This is about the same number of kids who have diabetes.
                    That means four or five kids with OCD are likely to be enrolled in any average size elementary school. In a medium to large high school, there could be 20 students struggling with the challenges caused by OCD.
                    International OCD Foundation (IOCDF)</string>
    <string name="adults_ocd_description">Our best estimates are that about 1 in 100 adults — or between 2 to 3 million adults in the United States — currently have OCD.
                    This is roughly the same number of people living in the city of Houston, Texas
                    International OCD Foundation (IOCDF)</string>
    <string name="age_ocd_description">OCD equally affects men, women, and children of all races, ethnicities, and backgrounds. OCD can start at any time from preschool to adulthood.
                    Although OCD can occur at any age, there are generally two age ranges when OCD tends to first appears:
                    Between the ages 8 and 12.
                    Between the late teen years and early adulthood.
                    International OCD Foundation (IOCDF)</string>
    <string name="what_symptoms_description">It is very necessary to know that the obsessions represented by thoughts, ideas or images in OCD can have any theme, from excessive fear of germs, excessive fear of harming someone, among many other themes, so there are three symptoms that are always present in OCD:
                    Intrusive thoughts, ideas and images that come to your mind suddenly and without your wanting it.
                    Degree of dissatisfaction, anxiety and discomfort due to the presence of these thoughts.
                    Actions or thoughts to counter these negative feelings</string>
    <string name="touch_to_see">Touch to see</string>
    <string name="contamination_ocd">Contamination OCD</string>
    <string name="contamination_ocd_description">Pollution OCD is one of the most well-known types of obsessive-compulsive disorder. This type of OCD can lead a person to have obsessive thoughts and fear of being "contaminated"</string>
    <string name="harm_ocd">Harm OCD</string>
</resources>