<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/waves_blue"
    android:padding="16dp"
    tools:context=".presentation.screens.register.RegisterFragment">

    <TextView
        android:id="@+id/your_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:paddingStart="10dp"
        android:background="@drawable/soft_water_circle"
        android:textAlignment="textStart"
        android:textColor="@color/azul_rocoso"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/would_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@drawable/soft_water_circle"
        android:text="@string/what_would"
        android:textAlignment="textStart"
        android:textColor="@color/azul_rocoso"
        android:textSize="26sp"
        android:paddingStart="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintName"
        android:inputType="text"
        android:textColorHint="@color/soft_water"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/would_name"
        app:layout_constraintVertical_bias="0.1"
        app:placeholderTextColor="@color/soft_water">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_rocoso_button"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/blue_button"
        android:text="@string/start_option"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTil" />

</androidx.constraintlayout.widget.ConstraintLayout>