<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/solid_soft_purple"
    android:padding="16dp"
    tools:context=".presentation.screens.onboarding.pages.SecondPageOnboardingFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieSecondPage"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/stressed" />


    <TextView
        android:id="@+id/titleSecondPageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/second_page_onboarding_title"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/descriptionSecondPageTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieSecondPage" />

    <TextView
        android:id="@+id/descriptionSecondPageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_light"
        android:text="@string/second_page_onboarding_description"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:paddingBottom="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nextOptionSecondPageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSecondPageTv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextOptionSecondPageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/blue_rocoso_button"
        android:text="@string/next_option"
        android:textAllCaps="false"
        android:textColor="@color/secondary_background_gray"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>