<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/waves_blue">

    <TextView
        android:id="@+id/would_name"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@drawable/soft_water_circle"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/what_would"
        android:textAlignment="center"
        android:textColor="@color/azul_rocoso"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/your_name"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/soft_water_circle"
        android:fontFamily="@font/montserrat_regular"
        android:padding="5dp"
        android:text="@string/your_name"
        android:textAlignment="center"
        android:textColor="@color/azul_rocoso"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/would_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/writing"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintName"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/soft_water"
        app:boxBackgroundColor="@null"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="115dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/soft_water"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconDrawable="@drawable/ic_baseline_favorite_24"
        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467"
        app:startIconDrawable="@drawable/ic_baseline_favorite_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_rocoso_button"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/button_name"
        android:layout_width="wrap_content"
        android:layout_height="285dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

</androidx.constraintlayout.widget.ConstraintLayout>